--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: app
 description: Flutter project template.
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
-  flutter: '>=3.24.3'
+  sdk: ">=3.1.0 <4.0.0"
+  flutter: ">=3.24.3"
 
 dependencies:
   auto_route: ^9.2.2
@@ -16,6 +16,7 @@ dependencies:
   flutter_hooks: ^0.20.1
   freezed_annotation: ^2.2.0
   gap: ^3.0.1
+  google_fonts: ^6.3.1
   hooks_riverpod: ^2.0.2
 
 dev_dependencies:
